# NeedForSeed

./: .gitignore  Cargo.toml
backend/: .env  Cargo.toml  README.md
backend/files/: music_1_month.html  music_1_week.html  music_1_year.html  music_2.html  music_2_all.html  music_2_month.html  music_2_week.html  music_3.html  music_3_month.html  music_3_week.html  music_3_year.html
backend/migrations/2022-09-19-074125_create_users/: up.sql
backend/src/: configuration.rs  errors.rs  main.rs  tests.rs  utils.rs
backend/src/auth/: mod.rs
backend/src/db/: users.rs
backend/src/handler/: api.rs
backend/src/models/: db.rs  models.rs  schema.rs
backend/src/models/src/models/: schema.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: lib.rs
frontend/src/api/: mod.rs  requests.rs
frontend/src/design/: mod.rs
frontend/src/page/: finance.rs  finance_managment_create.rs  home.rs  ledger_summary.rs  mod.rs  music.rs  not_found.rs  time_managment.rs  time_managment_create.rs
shared/src/: auth.rs  models.rs
